# server/routers/unitsRouter.js
@@ -6,6 +6,11 @@ router.get("/", unitsController.getAllUnits);
 
 router.get("/find-by-name/:unitName", unitsController.getUnitByName);
 
+router.get("/:id", unitsController.getUnitById);
+
 router.post("/add-new-unit", unitsController.addNewUnit);
+
+router.patch("/update-unit/:id", unitsController.updateUnitDetailes)
+
 
 module.exports = router
